--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -7,9 +7,17 @@ body:
     attributes:
       value: |
         ### 👍 Thank you for contributing to our project!
-        Please note Nextcloud Server is a **free and open-source** project. Most people volunteer their own time to help you, so please, be patient as well as respectful of their time.
-        This is **not** a technical support or general troubleshooting channel - you may never receive a direct response, but you report will be read by over 500 (!) maintainers and contributors.
-        Someone **may** follow-up if more information is needed, but you **might not** receive a personal response. The priorities are: reviewing each report, triaging issues, and fixing known and reported bugs.
+        Nextcloud is a **free and open-source** project.
+        People volunteer their time to help you, so please be patient and respectful of their time.
+        \
+        This is **not** a technical support or general troubleshooting channel.
+        \
+        You may never receive a direct response, but you report will be read by over 500 (!) maintainers and contributors.
+        \
+        Someone **may** follow-up if more information is needed, but you **might not** receive a personal response.
+        \
+        The priorities are: reviewing each report, triaging issues, and fixing known bugs.
+        \
         If you use Nextcloud Server and it is critical to your mission, you may obtain [Enterprise support](https://nextcloud.com/support/) from Nextcloud GmbH or a [Nextcloud *certified* partner](https://nextcloud.com/partners/).
   - type: checkboxes
     id: before-posting
@@ -18,16 +26,16 @@ body:
       description: All conditions are **required**. Your issue can be closed if these are checked incorrectly.
       options:
         - label: |
-            This is not a technical support question or a general troubleshooting query.
+            This is not a technical support question or a general troubleshooting query.\
             *If it could be, posting your query to the [Nextcloud Community Forum](https://help.nextcloud.com/) may get you assistance faster.*
           required: true
         - label: |
-            This appears to be **bug**, not local/environment specific issue.
+            This appears to be **bug**, not local/environment specific issue.\
             *If unsure, posting your query to the [Nextcloud Community Forum](https://help.nextcloud.com/) first can provide clarity.*
           required: true
         - label: |
-            This issue does not seem to already be reported.
-            [Search existing open bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+sort%3Acreated-desc+is%3Aopen+label%3Abug) and [Search recently closed bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+is%3Aclosed+sort%3Acreated-desc+label%3Abug).
+            This issue does not seem to already be reported.\
+            [Search existing open bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+sort%3Acreated-desc+is%3Aopen+label%3Abug) and [Search recently closed bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+is%3Aclosed+sort%3Acreated-desc+label%3Abug).\
             *Tip: If your bug is already reported by someone else, give it a 👍 to help us prioritize it.*
           required: true
         - label: Nextcloud Server **is** up to date. See [Maintenance and Release Schedule](https://github.com/nextcloud/server/wiki/Maintenance-and-Release-Schedule) for supported versions.
