--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -6,19 +6,16 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## 👍 Thank you for contributing to our project!\
+        ## 👍 Thank you for contributing to our project!
         ### Nextcloud is a **free and open-source** project.
         #### Many people volunteer their time to help you, so please be patient and respectful of their time.
+        ##### Reminders:
+        1. This is **not** a technical support or general troubleshooting channel. 
+        2. You may never receive a direct response, but you report will be read by over 500 (!) maintainers and contributors.
+        3. Someone **may** follow-up if more information is needed, but you **might not** receive a personal response.
+        4. The priorities are: reviewing each report, triaging issues, and fixing known bugs.
         \
-        This is **not** a technical support or general troubleshooting channel.
-        \
-        You may never receive a direct response, but you report will be read by over 500 (!) maintainers and contributors.
-        \
-        Someone **may** follow-up if more information is needed, but you **might not** receive a personal response.
-        \
-        The priorities are: reviewing each report, triaging issues, and fixing known bugs.
-        \
-        If you use Nextcloud Server and it is critical to your mission, you may obtain [Enterprise support](https://nextcloud.com/support/) from Nextcloud GmbH or a [Nextcloud *certified* partner](https://nextcloud.com/partners/).
+        **If you use Nextcloud Server and it is critical to your mission, you may obtain [Enterprise support](https://nextcloud.com/support/) from Nextcloud GmbH or a [Nextcloud *certified* partner](https://nextcloud.com/partners/).**
   - type: checkboxes
     id: before-posting
     attributes:
