--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -6,15 +6,15 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## 👍 Thank you for contributing to our project!
-        ### Nextcloud is a **free and open-source** project.
-        #### Many people volunteer their time to help you, so please be patient and respectful of their time.
-        ##### Reminders:
+        ### Nextcloud is a free and open-source project maintained and contributed to by over 800 individuals all around the world.
+        #### 👍 Thank you for contributing your own time by making this report and helping make Nextcloud even better!
+        #### Reminders:
         1. This is **not** a technical support or general troubleshooting channel. 
+        2. The reader of your report may be volunteering their own time to help you, so please be patient and respectful of their time.
         2. You may never receive a direct response, but you report will be read by over 500 (!) maintainers and contributors.
         3. Someone **may** follow-up if more information is needed, but you **might not** receive a personal response.
         4. The priorities are: reviewing each report, triaging issues, and fixing known bugs.
-        ### If you run Nextcloud Server in a mission critical environment, you may obtain [Enterprise support](https://nextcloud.com/support/) from Nextcloud GmbH or a [Nextcloud *certified* partner](https://nextcloud.com/partners/).**
+        ### If you run Nextcloud Server in a mission critical environment, you may prefer to obtain priority [Enterprise support](https://nextcloud.com/support/) from Nextcloud GmbH or a [certified Nextcloud partner](https://nextcloud.com/partners/).**
   - type: checkboxes
     id: before-posting
     attributes:
