--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -18,23 +18,19 @@ body:
   - type: checkboxes
     id: before-posting
     attributes:
-      label: "⚠️ We require that everyone agree to these points. ⚠️"
+      label: "⚠️ We require that everyone agree to the following: ⚠️"
       description: |
-        This ensures that everyone can be focused on addressing bugs and that you get the response or help you need.
-        1.This is not a technical support question or a general troubleshooting query.
+        (These ensure that everyone can be focused on addressing your bug report and that you get the response or help you truly need.)
         \
+        1.This is not a technical support question or a general troubleshooting query.
         *If it could be, posting your query to the [Nextcloud Community Forum](https://help.nextcloud.com/) may get you assistance faster.*
         2. This seems to be bug, not a local/environment specific issue.
-        \
         *If unsure, posting your query to the [Nextcloud Community Forum](https://help.nextcloud.com/) first can provide clarity.*
         3. This issue does not seem to already be reported.
-        \
         [Search existing open bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+sort%3Acreated-desc+is%3Aopen+label%3Abug) and [Search recently closed bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+is%3Aclosed+sort%3Acreated-desc+label%3Abug).
-        \
         *Tip: If your bug is already reported by someone else, give it a 👍 to help us prioritize it.*
-        4. Nextcloud and all apps are running supported versions up-to-date.
-        \
-        See [Maintenance and Release Schedule](https://github.com/nextcloud/server/wiki/Maintenance-and-Release-Schedule) for supported versions.
+        4. I'm running a supported version of Nextcloud and all apps are up-to-date.
+        *See [Maintenance and Release Schedule](https://github.com/nextcloud/server/wiki/Maintenance-and-Release-Schedule) for supported versions.*
         5. I've reviewed Nextcloud's [Code of Conduct](https://nextcloud.com/contribute/code-of-conduct/).
       options:
         - label: I agree.
