--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -32,6 +32,7 @@ body:
   - type: checkboxes
     id: before-posting
     attributes:
+      label: Click here
       options:
         - label: I agree.
           required: true
