--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -15,20 +15,18 @@ body:
         3. Someone **may** follow-up if more information is needed, but you **might not** receive a personal response.
         4. The priorities are: reviewing each report, triaging issues, and fixing known bugs.
         #### Note: If you run Nextcloud Server in a mission critical environment, you may wish to obtain [Enterprise support](https://nextcloud.com/support/) from Nextcloud GmbH or a [certified Nextcloud partner](https://nextcloud.com/partners/).
-        ## "⚠️ We require that everyone agree to the following when submitting a new bug report: ⚠️"
+        ## ⚠️ We require that everyone agree to the following when submitting a new bug report: ⚠️
         \
-        (These ensure that everyone can be focused on addressing your bug report and that you get the response or help you truly need.)
+        This ensures that everyone can be focused on addressing your bug report and that you get the response or help you truly need is as timely manner as possible.
         \
-        1.This is not a technical support question or a general troubleshooting query.
-        *If it could be, posting your query to the [Nextcloud Community Forum](https://help.nextcloud.com/) may get you assistance faster.*
-        2. This seems to be bug, not a local/environment specific issue.
-        *If unsure, posting your query to the [Nextcloud Community Forum](https://help.nextcloud.com/) first can provide clarity.*
-        3. This issue does not seem to already be reported.
-        [Search existing open bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+sort%3Acreated-desc+is%3Aopen+label%3Abug) and [Search recently closed bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+is%3Aclosed+sort%3Acreated-desc+label%3Abug).
-        *Tip: If your bug is already reported by someone else, give it a 👍 to help us prioritize it.*
+        1.This is not a technical support question or a general troubleshooting query. *If it could be, posting your query to the [Nextcloud Community Forum](https://help.nextcloud.com/) may get you assistance faster.*
+        2. This seems to be bug, not a local/environment specific issue. *If unsure, posting your query to the [Nextcloud Community Forum](https://help.nextcloud.com/) first can provide clarity.*
+        3. This issue does not seem to already be reported. *You may [search existing open bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+sort%3Acreated-desc+is%3Aopen+label%3Abug) and [search recently closed bugs](https://github.com/nextcloud/server/issues?q=is%3Aissue+is%3Aclosed+sort%3Acreated-desc+label%3Abug).
         4. I'm running a supported version of Nextcloud and all apps are up-to-date.
         *See [Maintenance and Release Schedule](https://github.com/nextcloud/server/wiki/Maintenance-and-Release-Schedule) for supported versions.*
         5. I've reviewed Nextcloud's [Code of Conduct](https://nextcloud.com/contribute/code-of-conduct/).
+        \
+        *Tip: If your bug has already been reported by someone else, give it a 👍 to help us prioritize it.*
   - type: checkboxes
     id: before-posting
     attributes:
