--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -14,7 +14,7 @@ body:
         2. You may never receive a direct response, but you report will be read by over 500 (!) maintainers and contributors.
         3. Someone **may** follow-up if more information is needed, but you **might not** receive a personal response.
         4. The priorities are: reviewing each report, triaging issues, and fixing known bugs.
-        #### You can obtain [Enterprise support](https://nextcloud.com/support/) from Nextcloud GmbH or a [certified Nextcloud partner](https://nextcloud.com/partners/) if you run Nextcloud Server in a mission critical environment ana timely response is required regardless of its nature.
+        #### You can obtain [Enterprise support](https://nextcloud.com/support/) from Nextcloud GmbH or a [certified Nextcloud partner](https://nextcloud.com/partners/) if you run Nextcloud Server in a mission critical environment. In addition to helping fund development, it is the only way to receive a guaranteed and timely response.
         ## ⚠️ We require that everyone agree to the following when submitting a new bug report: ⚠️
         \
         This ensures that everyone can be focused on addressing your bug report and that you get the response or help you truly need is as timely manner as possible.
