--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -224,7 +224,7 @@ body:
       description: |
         Provide Nextcloud logs lines.
       placeholder: |
-        Copy relevent contents from `data/nextcloud.log` or a use **Copy->Copy RAW** from *Administration settings->Logging* `/settings/admin/logging` section:
+        Copy relevent contents from `data/nextcloud.log` or click **Copy->Copy RAW** from *Administration settings->Logging* (`/settings/admin/logging`) in the web interface
         > NOTE: This will be automatically formatted into code for better readability.
       render: shell
   - type: textarea
