--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -38,7 +38,7 @@ body:
         Provide a brief description of the bug you're experiencing.
       placeholder: |
         A perfect description is unnecessary, but a concise and approachable description makes it more likely your report can be quickly reviewed, prioritized, and addressed by our busy volunteers, community members, and developers.
-        Extra context or additional information can be provided at the end of this form in **Additional info**.
+        Extra details or context can also be provided at the end of this form in **Additional info**.
     validations:
       required: true
   - type: textarea
@@ -49,7 +49,7 @@ body:
         "How do you trigger this bug? Please walk us through it step by step."
       placeholder: |
         Describe the steps someone else would likely need to go through to reproduce the bug.
-        The better your description is the fastesr your bug can be reviewed and addressed. 
+        The better your instructions the fastesr your bug can be triaged and addressed. 
         Example:
         1. Go 'here'
         2. Click 'there'
