--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -38,7 +38,8 @@ body:
         Tip: If applicable, screenshots can be uploaded into any text window to help explain your problem.
       placeholder: |
         A perfect description is unnecessary, but a concise and approachable description makes it more likely your report can be quickly reviewed, prioritized, and addressed by our busy volunteers, community members, and developers.
-        Extra details or context can also be provided at the end of this form in **Additional info**.
+          
+        Tip: Extra details or context, that may not make sense to include here, can be provided at the end of this form in **Additional info**.
     validations:
       required: true
   - type: textarea
@@ -56,6 +57,7 @@ body:
         4. See error
           
         Describe the steps someone else would likely need to go through to reproduce the bug.
+          
         Tip: The better your instructions the fastesr your bug can be triaged and addressed. 
     validations:
       required: true
