Remove 'multiple' attribute from issue template
Removed the 'multiple' attribute from the issue template to ensure only a single option can be selected.

--- a/.github/ISSUE_TEMPLATE/doc-improvement.yml
+++ b/.github/ISSUE_TEMPLATE/doc-improvement.yml
@@ -31,7 +31,6 @@ body:
         - Suggesting an improvement
         - Proposing new documentation content
         - Other
-      multiple: false
       required: true
   - type: input
     id: links
@@ -45,6 +44,7 @@ body:
       label: Summary
       description: In one sentence, summarize your suggestion or report.
       placeholder: Write your summary here.
+      required: true
   - type: textarea
     id: details
     attributes:
@@ -53,6 +53,7 @@ body:
         Describe your suggestion or idea in detail. If reporting a mistake, include steps to reproduce or context.
         Example: My amazing idea is [...]
       placeholder: Describe your idea or report in detail.
+      required: true
   - type: textarea
     id: notes
     attributes:
