Fix formatting and wording in doc-improvement template

--- a/.github/ISSUE_TEMPLATE/doc-improvement.yml
+++ b/.github/ISSUE_TEMPLATE/doc-improvement.yml
@@ -11,12 +11,11 @@ body:
         
         There is always room for improvement!
         ---
-        **Before you submit:**
         💡 **Tip:** Make sure you're looking at the latest version of the docs linked from [https://docs.nextcloud.com/](https://docs.nextcloud.com/).
   - type: checkboxes
     id: prechecks
     attributes:
-      label: Before You Submit
+      label: Before You Submit:
       options:
         - label: I have checked for existing issues and pull requests related to my suggestion.
         - label: I have posted on the [Nextcloud Help Forum](https://help.nextcloud.com) if my suggestion is a troubleshooting scenario or I'm unsure about the solution.
@@ -69,7 +68,7 @@ body:
 
         #### Pro Tip: Want to help even more?
 
-        - Look for areas where you can assist—even seemingly unrelated areas—as doing so frees up resources for your favorite topics and ideas.
+        - Look for areas where you can assist - even seemingly unrelated areas - as doing so frees up resources for your favorite topics and ideas.
         - Submit a proposed change that addresses your issue as a pull request.
         - Participate in discussions on other unresolved [submitted ideas ("issues")](https://github.com/nextcloud/documentation/issues) to help move them forward.
         - Post a comment or review on someone else's [proposed change ("pull request")](https://github.com/nextcloud/documentation/pulls) to help move it along.
