--- a/.github/ISSUE_TEMPLATE/doc-improvement.yml
+++ b/.github/ISSUE_TEMPLATE/doc-improvement.yml
@@ -15,7 +15,7 @@ body:
   - type: checkboxes
     id: prechecks
     attributes:
-      label: Before You Submit:
+      label: Before You Submit
       options:
         - label: I have checked for existing issues and pull requests related to my suggestion.
         - label: I have posted on the [Nextcloud Help Forum](https://help.nextcloud.com) if my suggestion is a troubleshooting scenario or I'm unsure about the solution.
