Rename feature request to enhancement idea

--- a/.github/ISSUE_TEMPLATE/server-idea.yml
+++ b/.github/ISSUE_TEMPLATE/server-idea.yml
@@ -1,4 +1,4 @@
-name: "🚀 Feature request"
+name: "🚀 Enhancement Idea"
 description: "Suggest an idea for this project"
 title: "[Feature] "
 labels:
