Add instructions section to server idea template
Added instructions for submitters in the server idea template.

--- a/.github/ISSUE_TEMPLATE/server-idea.yml
+++ b/.github/ISSUE_TEMPLATE/server-idea.yml
@@ -33,6 +33,7 @@ body:
 
   - type: textarea
     attributes:
+      label: Instructions
       description: "Submitter: Please retain this note as guidance for readers of your idea."
       value: |
         ### Like this suggestion?
